--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+      <p>ジャンル検索</p>
+    </div>
+    <div class='col-md-8 offset-md-1'>
+      <p class="home-text">ようこそ、ながのCAKEへ！<br>
+        このサイトは、ケーキ販売のECサイトになります。
+        会員でない方も商品の閲覧はできますが、<br>
+        購入には会員登録が必要になります。
+      </p>
+    </div>
+  </div>
+</div>
