--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/"><span>Bookers</span></a>
+      <a class="navbar-brand" href="/"><span>LOGO</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -9,75 +9,70 @@
         <ul class="navbar-nav ml-auto">
         <% if admin_signed_in? %>
           <li>
-            <%= link_to root_path,class: 'nav-link text-light' do %>
+            <%= link_to admin_items_path,class: 'nav-link text-light' do %>
               <i class="fas fa-home"></i> 商品一覧
             <% end %>
           </li>
           <li>
-            <%=  link_to root_path,class: 'nav-link text-light' do %>
-              <i class="fas fa-users"></i> 会員一覧
+            <%=  link_to admin_customer_path,class: 'nav-link text-light' do %>
+              <i class=""></i> 会員一覧
             <% end %>
           </li>
           <li>
-            <%=  link_to root_path ,class: 'nav-link text-light' do %>
-              <i class="fas fa-book-open"></i> 注文履歴一覧
+            <%=  link_to admin_root_path ,class: 'nav-link text-light' do %>
+              <i class=""></i> 注文履歴一覧
             <% end %>
           </li>
           <li>
-            <%= link_to root_path, method: :delete,class: 'nav-link text-light' do %>
-              <i class="fas fa-sign-out-alt"></i> ジャンル一覧
+            <%= link_to admin_genres_path, method: :delete,class: 'nav-link text-light' do %>
+              <i class=""></i> ジャンル一覧
             <% end %>
           </li>
           <li>
-            <%= link_to root_path, method: :delete,class: 'nav-link text-light' do %>
-              <i class="fas fa-sign-out-alt"></i> ログアウト
+            <%= link_to destroy_admin_session_path, method: :delete,class: 'nav-link text-light' do %>
+              <i class=""></i> ログアウト
             <% end %>
           </li>
           <% elsif customer_signed_in? %>
           <li>
-            <%= link_to root_path(current_user),class: 'nav-link text-light' do %>
-              <i class="fas fa-home"></i> マイページ
+            <%= link_to current_customer,class: 'nav-link text-light' do %>
+              <i class=""></i> マイページ
             <% end %>
           </li>
           <li>
-            <%=  link_to root_path,class: 'nav-link text-light' do %>
-              <i class="fas fa-users"></i> 商品一覧
+            <%=  link_to items_path,class: 'nav-link text-light' do %>
+              <i class=""></i> 商品一覧
             <% end %>
           </li>
           <li>
-            <%=  link_to root_path ,class: 'nav-link text-light' do %>
-              <i class="fas fa-book-open"></i> カート
+            <%=  link_to cart_items_path,class: 'nav-link text-light' do %>
+              <i class=""></i> カート
             <% end %>
           </li>
           <li>
             <%= link_to root_path, method: :delete,class: 'nav-link text-light' do %>
-              <i class="fas fa-sign-out-alt"></i> ログアウト
+              <i class=""></i> ログアウト
             <% end %>
           </li>
         <% else %>
-          <li class="nav-item">
-            <%= link_to about_path do %>
-              <i class="">About</i>
+          <li>
+            <%= link_to about_path,class: 'nav-link text-light' do %>
+              <i class=""></i> About
             <% end %>
           </li>
           <li>
-            <%= link_to root_path,class: 'nav-link text-light' do %>
-              <i class="fas fa-home"></i> About
+            <%= link_to items_path,class: 'nav-link text-light' do %>
+              <i class=""></i> 商品一覧
             <% end %>
           </li>
           <li>
-            <%= link_to root_path,class: 'nav-link text-light' do %>
-              <i class="fas fa-link"></i> 商品一覧
-            <% end %>
-          </li>
-          <li>
-            <%= link_to root_path,class: 'nav-link text-light' do %>
+            <%= link_to new_customer_registration_path,class: 'nav-link text-light' do %>
               <i class=""></i> 新規登録
             <% end %>
           </li>
           <li>
-            <%= link_to root_path ,class: 'nav-link text-light' do %>
-              <i class="fas fa-sign-in-alt"></i> ログイン
+            <%= link_to customer_session_path ,class: 'nav-link text-light' do %>
+              <i class=""></i> ログイン
             <% end %>
           </li>
         <% end %>
