--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,5 +1,13 @@
-<h1>About</h1>
-<p>ながのCAKEは全国発送可能なケーキ屋さんです。</br>
-  お子様からお年寄りの方までお召し上がりいただけるよう、様々なバリエーションをご用意しております。
-  また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。ぜひご注文ください
-</p>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-8 ml-auto'>
+      <h1>About</h1>
+      <p>
+        ながのCAKEは全国発送可能なケーキ屋さんです。</br>
+        お子様からお年寄りの方までお召し上がりいただけるよう、</br>
+        様々なバリエーションをご用意しております。</br>
+        また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。ぜひご注文ください。
+      </p>
+    </div>
+  </div>
+</div>
