--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,11 +10,11 @@
         <% if admin_signed_in? %>
           <li>
             <%= link_to admin_items_path,class: 'nav-link text-light' do %>
-              <i class="fas fa-home"></i> 商品一覧
+              <i class=""></i> 商品一覧
             <% end %>
           </li>
           <li>
-            <%=  link_to admin_customer_path,class: 'nav-link text-light' do %>
+            <%=  link_to admin_customers_path,class: 'nav-link text-light' do %>
               <i class=""></i> 会員一覧
             <% end %>
           </li>
@@ -24,7 +24,7 @@
             <% end %>
           </li>
           <li>
-            <%= link_to admin_genres_path, method: :delete,class: 'nav-link text-light' do %>
+            <%= link_to admin_genres_path, class: 'nav-link text-light' do %>
               <i class=""></i> ジャンル一覧
             <% end %>
           </li>
