--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -12,3 +12,10 @@
     </div>
   </div>
 </div>
+<div class="container new-item">
+  <h2>新着商品</h2>
+  <div class="row">
+    <p>商品たち新着順？４つ</p>
+    
+  </div>
+</div>
