--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
           </li>
           <% elsif customer_signed_in? %>
           <li>
-            <%= link_to current_customer,class: 'nav-link text-light' do %>
+            <%= link_to current_customer_path,class: 'nav-link text-light' do %>
               <i class=""></i> マイページ
             <% end %>
           </li>
@@ -50,7 +50,7 @@
             <% end %>
           </li>
           <li>
-            <%= link_to root_path, method: :delete,class: 'nav-link text-light' do %>
+            <%= link_to destroy_customer_session_path, method: :delete,class: 'nav-link text-light' do %>
               <i class=""></i> ログアウト
             <% end %>
           </li>
