トップページ修正

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -55,6 +55,14 @@
       </div>
     </div>
   <% end %>
-
-  <%= render "public/shared/links" %>
+  <div class="row my-3">
+    <div class="col-sm-4 px-sm-0 offset-sm-1">
+      <h5>すでに登録済みの方</h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-2 px-sm-0 offset-sm-1">
+      <%= render "public/shared/links" %>
+    </div>
+  </div>
 </div>
