--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,35 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-10 px-sm-0 mx-auto">
+      <h2>注文履歴一覧</h2>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th class="table-active">購入日時</th>
+            <th class="table-active">購入者</th>
+            <th class="table-active">注文個数</th>
+            <th class="table-active">注文ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+            <tr>
+              <td class="align-middle link">
+                <%= link_to admin_order_path(order) do %>
+                <%= order.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
+                <% end %>
+              </td>
+              <td class="align-middle">
+                <%= order.customer.last_name+order.customer.first_name %>
+              </td>
+              <td class="align-middle">
+                <!--注文個数を出力する-->
+              </td>
+              <td class="align-middle"><%= order.status %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
