--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -15,7 +15,23 @@
 <div class="container new-item">
   <h2>新着商品</h2>
   <div class="row">
-    <p>商品たち新着順？４つ</p>
-    
+     <% @items.first(4).each do |item| %>
+    <div class="col-md-3 col-sm-6">
+        <div class="card w-100 bg-transparent border-0" style="width: 18rem;">
+          <%= link_to item_path(item) do %>
+            <div class="img-wrap"><%= attachment_image_tag(item, :image , width: "100%", height: "200px",fallback: "no_image.jpg") %></div>
+          <% end %>
+          <div class="card-body">
+            <p class="card-text"><%= item.name %></p>
+            <% if item.sales_status == true %>
+              <p class="card-text"><%= item.without_tax_price %>円(税抜き)</p>
+            <% else %>
+              <p class="card-text text-danger">販売停止中</p>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
+  <div class="all-items-show-button"><%= link_to "全ての商品をみる", items_path %></div>
 </div>
