--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+注文履歴一覧
+<table>
+  <tr>
+    <td>購入日時</td>
+    <td>購入者</td>
+    <td>注文個数</td>
+    <td>注文ステータス</td>
+  </tr>
+    <% @orders.each do |order| %>
+      <tr>
+          <td>
+            <%= link_to  admin_order_detail_path(order.id) do %>
+              <%=  l order.created_at %>
+            <% end %>
+          </td>
+          <td><%= order.customer.first_name%><%= order.customer.last_name %></td>
+          <td><%= order.order_details.sum(:number) %></td>
+          <td><%= order.order_status_i18n %></td>
+      </tr>
+    <% end %>
+</table>
