--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,9 +1,10 @@
 <%= form_with model: @order, url: '/orders/confirm' , local: true do |f| %>
   <h4>支払い方法</h4>
-  <%= f.radio_button :payment_method, "credit_card" %>
-  <%= f.label :payment_method, "クレジットカード" %>
-  <%= f.radio_button :payment_method, "transfer" %>
-  <%= f.label :payment_method, "銀行振込" %>
+    <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+    <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
+    
+    <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+    <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
 
   <h3>お届け先</h3>
   
@@ -13,7 +14,7 @@
  
     登録済住所から選択 
     <p><%= f.radio_button :select_address, 1 %>登録済住所から選択</p>
-    <p><%= f.select :address_id , options_from_collection_for_select(@addresses, :id, :full_address) %></p>
+    <p><%= f.select :address_id , options_from_collection_for_select(Address.all, :id, :address_display) %></p>
     
     新しいお届け先
     <p><%= f.radio_button :select_address, 2 %>新しいお届け先</p>
