--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,13 +1,28 @@
-<h3>ジャンル一覧・追加</h3>
+<div class='container pt-5'>
+    <div class='row'>
+        <div class='col-md-6'>
+            <h3>ジャンル一覧・追加</h3>
 
-<%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
-    <td><%= f.label :"ジャンル名", class: "mr-3" %></td>
-    <td><%= f.text_field :name, class: "mr-5" %></td>
-    <td><%= f.submit'新規登録',class: "btn btn-success" %></td>
-<% end %>
-
-<th>ジャンル</th>
-<% @genres.each do |genre| %>
-    <td><%= genre.name %></td>
-    <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn-success" %></td>
-<%end%>
+            <%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
+                <td><%= f.label :"ジャンル名", class: "mr-3" %></td>
+                <td><%= f.text_field :name, class: "mr-5" %></td>
+                <td><%= f.submit'新規登録',class: "btn btn-success" %></td>
+            <% end %>
+        
+            <table class='table border-top border-bottom mt-3'>
+                <thead class='table-secondary'>
+                    <th>ジャンル</th>
+                    <th colspan="3"></th>
+                </thead>
+                <tbody>
+                    <% @genres.each do |genre| %>
+                        <tr>
+                            <td><%= genre.name %></td>
+                            <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %></td>
+                        </tr>
+                    <%end%>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
