--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<table class="table table-bordered"> 
+  <thead>
+      <th>商品名</th>
+      <th>単価(税込)</th>
+      <th>数量</th>
+      <th>小計</th>
+  </thead>
+  <tbody>
+  <% @cart_item.each do |cart_item| %>
+      <tr>
+        <td><%= cart_item.item.name %></td>
+          <td><%= (cart_item.item.price * 1.1).floor %></td>
+          <td><%= cart_item.item.name %></td>
+          <td><%= (cart_item.item.price * 1.1).floor * cart_item.amount %></td>
+          <% @合計金額 +=  (cart_item.item.price * 1.1).floor * cart_item.amount %>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
