--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<h1>商品編集</h1>
+<%= form_with model: @item, url: admin_item_path, method: :patch do |f| %>
+
+  <h4>商品画像</h4>
+  <%= f.file_field :image, accept: "image/*" %>
+<h4>商品名</h4>
+  <%= f.text_field :name %>
+<h4>商品説明</h4>
+  <%= f.text_area :explamatory_text %>
+<h4>ジャンル</h4>
+<%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい" %>
+<h4>税抜価格</h4>
+  <%= f.text_area :without_tax_price %>円
+<h4>販売ステータス</h4>
+  <%= f.radio_button :is_sales_status, value: true %>
+    <%= f.label :is_sales_status, "販売中", {value: :true, style: "display: inline-block;"} %>
+  <%= f.radio_button :is_sales_status, value: false %>
+    <%= f.label :is_sales_status, "販売停止中", {value: :false, style: "display: inline-block;"} %>
+
+  <%= f.submit '変更を保存', class:"btn btn-success" %>
+
+
+<% end %>
+
