--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<h1>商品一覧</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>商品ID</th>
+      <th>商品名</th>
+      <th>税抜価格</th>
+      <th>ジャンル</th>
+      <th>ステータス</th>
+    </tr>
+  </thead>
+
+<% @items.each do |item| %>
+
+<tbody>
+  <tr>
+    <td><%= item.id %></td>
+    <td><%= link_to item.name, admin_item_path(item.id)%></td>
+　　<td><%= item.without_tax_price %>円</td>
+　　<!--ジャンル名が表示されるようにしたい-->
+    <td><%= item.genre_id %></td>
+    <!--販売ステータスが名前で表示されるようにしたい-->
+    <td><%= item.is_sales_status %></td>
+  </tr>
+</tbody>
+<% end %>
+</table>
+
+<!--ページネーション確認-->
+
