--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<h1>商品詳細</h1>
+
+  <%= image_tag @item.image, size: "300x300" %>
+<h4>商品名</h4>
+  <%= @item.name %>
+<h4>商品説明</h4>
+  <%= @item.explamatory_text %>
+<h4>ジャンル</h4>
+<!--ジャンル名が表示されるようにしたい-->
+  <%= @item.genre_id %>
+<h4>税込価格（税抜価格）</h4>
+<!--税込価格と一緒に表示されるようにしたい-->
+  <%= @item.without_tax_price %>円
+<h4>販売ステータス</h4>
+  <%= @item.is_sales_status %>
+<!--販売ステータスが名前で表示されるようにしたい-->
+  <p><%= link_to "編集する", edit_admin_item_path(@item), class:"btn btn-success" %></p>
+
+
