--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,10 +1,7 @@
-<h1>Public::Customers#confirm</h1>
-<p>Find me in app/views/public/customers/confirm.html.erb</p>
-
-<strong>本当に退会しますか？</strong>
+<strong>本当に退会しますか？</strong><br>
 退会すると、会員登録情報や<br>
 これまでの購入履歴が閲覧できなくなります。<br>
 退会する場合は、「退会する」をクリックしてください。
 
-<%= f.submit '退会しない' %>
-<%= f.submit '退会する' %>
+<!--退会処理を行いたい-->
+<p><%= link_to "退会しない", current_customer_path, class:"btn btn-success" %><%= link_to "退会する", current_customer_path, class:"btn btn-success" %></p></p>
