--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,9 +1,5 @@
-<h1>Public::Customers#show</h1>
-<p>Find me in app/views/public/customers/show.html.erb</p>
-
 <h1>マイページ</h1>
-<h2>登録情報</h2>
-<p><%= link_to "編集する", current_customer_edit_path(@customer), class:"btn btn-success btn-sm btn-block sign_up" %></p>
+<h2>登録情報<%= link_to "編集する", current_customer_edit_path, class:"btn btn-success" %></h2>
 
 <div>
   <h3>氏名<%= @customer.last_name %> <%= @customer.first_name %></h3>
@@ -13,5 +9,7 @@
   <h3>電話番号<%= @customer.telephone_number %></h3>
   <h3>メールアドレス<%= @customer.email %></h3>
 </div>
-<h2>配送先</h2><p><%= link_to “一覧を見る”, delivery_path, class:"btn btn-info btn-sm btn-block mb-3" %></p>
-<h2>注文履歴</h2><p><%= link_to “一覧を見る”, orders_path, class:"btn btn-info btn-sm btn-block mb-3" %></p>
+
+<!--下記反映させたい-->
+<h2>配送先<%= link_to "一覧を見る", delivery_index_path, class:"btn btn-info" %></h2>
+<h2>注文履歴<%= link_to "一覧を見る", orders_path, class:"btn btn-info" %></h2>
