--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,44 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h2><%= @customer.last_name + @customer.first_name %>さんの会員詳細</h2>
+
+      <table>
+        <tbody>
+          <tr>
+            <td>会員ID</td>
+            <td><%= @customer.id %></td>
+          </tr>
+          <tr>
+            <td>氏名</td>
+            <td><%= @customer.last_name + @customer.first_name %></td>
+          </tr>
+          <tr>
+            <td>フリガナ</td>
+            <td><%= @customer.last_name_kana + @customer.first_name_kana %></td>
+          </tr>
+          <tr>
+            <td>郵便番号</td>
+            <td><%= @customer.postal_code %></td>
+          </tr>
+          <tr>
+            <td>住所</td>
+            <td><%= @customer.postal_code %></td>
+          </tr>
+          <tr>
+            <td>電話番号</td>
+            <td><%= @customer.telephone_number %></td>
+          </tr>
+          <tr>
+            <td>メールアドレス</td>
+            <td><%= @customer.email %></td>
+          </tr>
+          <tr>
+            <td>会員ステータス</td>
+            <td class="<%= @customer.is_deleted ? 'text-gray' : 'text-green' %>"><%= @customer.is_deleted ? '退会済み' : '有効' %></td>
+          </tr>
+          <tr><td><%= link_to "編集する", edit_admin_customer_path(@customer) %></td></tr>
+          <tr><td><%= link_to "注文履歴一覧を見る", admin_root_path %></td></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
