--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -12,9 +12,9 @@
 <h4>税抜価格</h4>
   <%= f.text_area :without_tax_price %>円
 <h4>販売ステータス</h4>
-  <%= f.radio_button :is_sales_status, value: true %>
+  <%= f.radio_button :is_sales_status, true %>
     <%= f.label :is_sales_status, "販売中", {value: :true, style: "display: inline-block;"} %>
-  <%= f.radio_button :is_sales_status, value: false %>
+  <%= f.radio_button :is_sales_status, false %>
     <%= f.label :is_sales_status, "販売停止中", {value: :false, style: "display: inline-block;"} %>
 
   <%= f.submit '変更を保存', class:"btn btn-success" %>
