--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,5 +1,7 @@
 <h1>商品一覧</h1>
 
+<%= link_to "+", new_admin_item_path %></p>
+
 <table>
   <thead>
     <tr>
@@ -17,11 +19,16 @@
   <tr>
     <td><%= item.id %></td>
     <td><%= link_to item.name, admin_item_path(item.id)%></td>
+    <!--3桁区切りにしたい-->
 　　<td><%= item.without_tax_price %>円</td>
-　　<!--ジャンル名が表示されるようにしたい-->
-    <td><%= item.genre_id %></td>
-    <!--販売ステータスが名前で表示されるようにしたい-->
-    <td><%= item.is_sales_status %></td>
+    <td><%= item.genre.name %></td>
+    <td>
+      <% if  item.is_sales_status == true %>
+        販売中
+      <% else %>
+        販売停止中
+      <% end %>
+    </td>
   </tr>
 </tbody>
 <% end %>
