--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -17,6 +17,6 @@
     <%= f.label :is_sales_status, "販売中", {value: :true, style: "display: inline-block;"} %>
   <%= f.radio_button :is_sales_status, false %>
     <%= f.label :is_sales_status, "販売停止中", {value: :false, style: "display: inline-block;"} %>
-  <%= f.submit '新規登録' %>
+  <%= f.submit '新規登録', class:"btn btn-success" %>
 
 <% end %>
