--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -6,14 +6,17 @@
 <h4>商品説明</h4>
   <%= @item.explamatory_text %>
 <h4>ジャンル</h4>
-<!--ジャンル名が表示されるようにしたい-->
-  <%= @item.genre_id %>
+  <%= @item.genre.name %>
 <h4>税込価格（税抜価格）</h4>
-<!--税込価格と一緒に表示されるようにしたい-->
-  <%= @item.without_tax_price %>円
+<!--税込価格と一緒に表示されるようにしたい--><!--3桁区切りにしたい-->
+ <%= @item.add_tax_without_tax_price.to_s(:dalimited) %>
+  <%= @item.without_tax_price.to_s(:dalimited) %>円
 <h4>販売ステータス</h4>
-  <%= @item.is_sales_status %>
-<!--販売ステータスが名前で表示されるようにしたい-->
+  <% if  @item.is_sales_status == true %>
+  　販売中
+  <% else %>
+    販売停止中
+  <% end %>
   <p><%= link_to "編集する", edit_admin_item_path(@item), class:"btn btn-success" %></p>
 
 
