--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -20,7 +20,7 @@
    <%= f.text_field :email %>
   <%= f.submit '編集内容を保存', class:"btn btn-success" %>
   <!--退会確認画面に移りたい-->
-　<%= link_to "退会する", current_customer_confirm_path, class:"btn btn-success" %></p>
+　<%= link_to "退会する", current_customer_confirm_path, class:"btn btn-danger" %></p>
 
 <% end %>
 
