--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -10,6 +10,5 @@
   <h3>メールアドレス<%= @customer.email %></h3>
 </div>
 
-<!--下記反映させたい-->
-<h2>配送先<%= link_to "一覧を見る", delivery_index_path, class:"btn btn-info" %></h2>
-<h2>注文履歴<%= link_to "一覧を見る", orders_path, class:"btn btn-info" %></h2>
+<h2>配送先<%= link_to "一覧を見る", delivery_addresses_path, class:"btn btn-primary" %></h2>
+<h2>注文履歴<%= link_to "一覧を見る", orders_path, class:"btn btn-primary" %></h2>
