--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Items#index</h1>
-<p>Find me in app/views/public/items/index.html.erb</p>
+<h1>商品一覧(全<%=@items.where('created_at > ?', Date.today).count %>件)</h1>
+
+<table>
+  <thead>
+  </thead>
+  <tbody>
+    <% @items.each do |item| %>
+     <tr><td><%= link_to image_tag(item.image, width: '100', height: '100'), item_path(item) %></td>
+        <td><%= item.name %>
+        <td><%= item.without_tax_price %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
