--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -45,20 +45,21 @@
     <tr>
         <th>お届け先</th>
         <td>
-            <%= @order.address %>
-            <%= @order.name %>
+            〒<%= @order.delivery_postal_code %>
+            <%= @order.delivery_address %>
+            <%= @order.delivery_address_name %>
         </td>
     </tr>
 </table>
 
 <%= form_with model: @order_new , url: "/orders" , local:true do |f| %>
-    <%= f.hidden_field :customer_id, value: current_end_user.id %>
+    <%= f.hidden_field :customer_id, value: current_customer.id %>
     <%= f.hidden_field :payment_method, value:  @order.payment_method %>
     <%= f.hidden_field :postage, value: 800 %>
-    <%= f.hidden_field :postal_code, value: @order.postal_code %>
+    <%= f.hidden_field :postal_code, value: @order.delivery_postal_code %>
     <%= f.hidden_field :amount_requested, value: @sum + 800%>
-    <%= f.hidden_field :address, value: @order.address%>
-    <%= f.hidden_field :name, value: @order.name %>
+    <%= f.hidden_field :address, value: @order.delivery_address%>
+    <%= f.hidden_field :name, value: @order.delivery_address_name %>
     <%= f.hidden_field :order_status, value: "wait_payment"%>
     <%= f.submit "注文を確定する" %>
 <% end %>
