管理者側顧客管理機能追加

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -13,6 +13,11 @@
         </thead>
         <tbody>
           <!--注文履歴一覧をだす-->
+          <!--% @orders.each do |order| %-->
+          
+          
+          <!--% end %-->
+          
         </tbody>
       </table>
     </div>
