--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,13 +1,13 @@
-<div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-8 ml-auto'>
+<div class="container">
+
+    <div class="plate mx-auto mb-5" id="cork">
       <h1>About</h1>
-      <p>
+      <p class=""text-center"">
         ながのCAKEは全国発送可能なケーキ屋さんです。</br>
         お子様からお年寄りの方までお召し上がりいただけるよう、</br>
         様々なバリエーションをご用意しております。</br>
         また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。ぜひご注文ください。
       </p>
     </div>
-  </div>
+
 </div>
