--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -8,17 +8,20 @@
   </thead>
   <tbody>
   <% @cart_items.each do |cart_item| %>
+    <% if cart_item.quantity == 0 %>
+     <% else %>
        <tr>
         <td><%= cart_item.item.name %></td>
         <td><%= (cart_item.item.without_tax_price * 1.1).floor %></td>
         <td>
           <%= form_for cart_item, url: cart_item_path(cart_item), method: :patch do |f| %>
-            <%= f.select :quantity, options_for_select((1..10).map { |i| [i, i] }, selected: cart_item.quantity) %>
+            <%= f.select :quantity, options_for_select((0..100).map { |i| [i, i] }, selected: cart_item.quantity) %>
             <%= f.submit "数量の変更を確定" %>
           <% end %>
         </td>
         <td><%= (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity %></td>
       </tr>
+      <% end %> 
     <% end %>
     <tr>
       <td colspan="3">合計金額</td>
