--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,5 +1,4 @@
-<h1>商品一覧(全<%=@items.where('created_at > ?', Date.today).count %>件)</h1>
-
+<h1>商品一覧(全<%= Item.count %>件)</h1>
 <table>
   <thead>
   </thead>
@@ -7,7 +6,7 @@
     <% @items.each do |item| %>
      <tr><td><%= link_to image_tag(item.image, width: '100', height: '100'), item_path(item) %></td></tr>
        <tr> <td><%= item.name %></td></tr>
-       <tr> <td>￥<%= item.without_tax_price %></td>/<tr>
+       <tr> <td>￥<%= item.without_tax_price %></td><tr>
     <% end %>
   </tbody>
 </table>
