--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,4 +1,5 @@
-<table class="table table-bordered"> 
+<h1>ショッピングカート</h1>
+<table class="table table-bordered">
   <thead>
       <th>商品名</th>
       <th>単価(税込)</th>
@@ -6,14 +7,29 @@
       <th>小計</th>
   </thead>
   <tbody>
-  <% @cart_item.each do |cart_item| %>
-      <tr>
+  <% @cart_items.each do |cart_item| %>
+    <% if cart_item.quantity == 0 %>
+     <% else %>
+       <tr>
         <td><%= cart_item.item.name %></td>
-          <td><%= (cart_item.item.price * 1.1).floor %></td>
-          <td><%= cart_item.item.name %></td>
-          <td><%= (cart_item.item.price * 1.1).floor * cart_item.amount %></td>
-          <% @合計金額 +=  (cart_item.item.price * 1.1).floor * cart_item.amount %>
+        <td><%= (cart_item.item.without_tax_price * 1.1).floor %></td>
+        <td>
+          <%= form_for cart_item, url: cart_item_path(cart_item), method: :patch do |f| %>
+            <%= f.select :quantity, options_for_select((0..100).map { |i| [i, i] }, selected: cart_item.quantity) %>
+            <%= f.submit "数量の変更を確定" %>
+          <% end %>
+        </td>
+        <td><%= (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity %></td>
       </tr>
-  <% end %>
+      <% end %> 
+    <% end %>
+    <tr>
+      <td colspan="3">合計金額</td>
+      <td><%= @cart_items.sum { |cart_item| (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity } %></td>
+    </tr>
   </tbody>
 </table>
+<%= link_to "買い物を続ける", items_path, class: 'btn btn-primary' %></br>
+</br>
+</br>
+<%= link_to "注文情報入力に移動", orders_path, class: 'btn btn-primary' %>
