--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+<%= form_with model: @cart_item, url: cart_items_path do |f| %>
+  <%= f.hidden_field :item_id, value: @item.id %>
+  <%= image_tag @item.image, size: "300x300" %>
+  <h2>商品名</h2>
+  <p><%= @item.name %></p>
+  <h2>商品説明</h2>
+  <p><%= @item.explamatory_text %></p>
+  <h2>税込価格</h2>
+  <p><%= @item.add_tax_without_tax_price.to_s(:delimited) %>円</p>
+  <%= f.select :quantity, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], { include_blank: '個数選択' }, required: true %>&emsp;
+  <%= f.submit "カートに入れる", class: 'btn btn-primary' %>
+<% end %>
