--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -32,4 +32,4 @@
 <%= link_to "買い物を続ける", items_path, class: 'btn btn-primary' %></br>
 </br>
 </br>
-<%= link_to "注文情報入力に移動", orders_path, class: 'btn btn-primary' %>
+<%= link_to "注文情報入力に移動", new_order_path, class: 'btn btn-primary' %>
