--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,44 +1,51 @@
 <div class="container">
   <div class="row">
+    <div class="col-sm-8 px-sm-0 offset-sm-1">
     <h2><%= @customer.last_name + @customer.first_name %>さんの会員詳細</h2>
-
-      <table>
-        <tbody>
-          <tr>
-            <td>会員ID</td>
-            <td><%= @customer.id %></td>
-          </tr>
-          <tr>
-            <td>氏名</td>
-            <td><%= @customer.last_name + @customer.first_name %></td>
-          </tr>
-          <tr>
-            <td>フリガナ</td>
-            <td><%= @customer.last_name_kana + @customer.first_name_kana %></td>
-          </tr>
-          <tr>
-            <td>郵便番号</td>
-            <td><%= @customer.postal_code %></td>
-          </tr>
-          <tr>
-            <td>住所</td>
-            <td><%= @customer.postal_code %></td>
-          </tr>
-          <tr>
-            <td>電話番号</td>
-            <td><%= @customer.telephone_number %></td>
-          </tr>
-          <tr>
-            <td>メールアドレス</td>
-            <td><%= @customer.email %></td>
-          </tr>
-          <tr>
-            <td>会員ステータス</td>
-            <td class="<%= @customer.is_deleted ? 'text-gray' : 'text-green' %>"><%= @customer.is_deleted ? '退会済み' : '有効' %></td>
-          </tr>
-          <tr><td><%= link_to "編集する", edit_admin_customer_path(@customer) %></td></tr>
-          <tr><td><%= link_to "注文履歴一覧を見る", admin_root_path %></td></tr>
-        </tbody>
-      </table>
     </div>
   </div>
+    <div class="row">
+      <div class="col-sm-6 px-sm-0 offset-sm-1">
+      <table class="table table-bordered">
+        <tr>
+          <th class="table-active">会員ID</th>
+          <td><%= @customer.id %></td>
+        </tr>
+        <tr>
+          <th class="table-active">氏名</th>
+          <td><%= @customer.last_name + @customer.first_name %></td>
+        </tr>
+        <tr>
+          <th class="table-active">フリガナ</th>
+          <td><%= @customer.last_name_kana + @customer.first_name_kana %></td>
+        </tr>
+        <tr>
+          <th class="table-active">郵便番号</th>
+          <td><%= @customer.postal_code %></td>
+        </tr>
+        <tr>
+          <th class="table-active">住所</th>
+          <td><%= @customer.postal_code %></td>
+        </tr>
+        <tr>
+          <th class="table-active">電話番号</th>
+          <td><%= @customer.telephone_number %></td>
+        </tr>
+        <tr>
+          <th class="table-active">メールアドレス</th>
+          <td><%= @customer.email %></td>
+        </tr>
+        <tr>
+          <th class="table-active">会員ステータス</th>
+          <td class="<%= @customer.is_deleted ? 'text-gray' : 'text-green' %>"><%= @customer.is_deleted ? '退会済み' : '有効' %></td>
+        </tr>
+      </table>
+      </div>
+    </div>
+  <div class="row mb-2">
+    <div class="col-lg-6 px-sm-0 offset-sm-1">
+      <%= link_to "編集する", edit_admin_customer_path(@customer) %>
+      <%= link_to "注文履歴一覧を見る", admin_root_path %>
+    </div>
+  </div>
+</div>
