--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,3 +1,3 @@
 <h1>注文履歴詳細</h1>
-<%= form_with model: @order, url: admin_order_path, method: :patch, local: true do |f| %>
-<% end %>
+<!-- form_with model: @order, url: admin_order_path, method: :patch, local: true do |f| -->
+<!--end-->
