[add]注文一覧実装

--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -14,7 +14,7 @@
             <%= cart_item.item.name %>
         </td>
         <td><%= cart_item.item.without_tax_price %></td>
-        <td><%= cart_item.quantity %></td>]
+        <td><%= cart_item.quantity %></td>
         <% @total += cart_item.total_price %>
         <td><%= @total %></td>
     </tr>
