--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,21 +1,28 @@
 注文履歴一覧
 <table>
   <tr>
-    <td>購入日時</td>
-    <td>購入者</td>
-    <td>注文個数</td>
-    <td>注文ステータス</td>
+    <td>注文日</td>
+    <td>配送先</td>
+    <td>注文商品</td>
+    <td>支払金額</td>
+    <td>ステータス</td>
+    <td>注文詳細</td>
   </tr>
     <% @orders.each do |order| %>
       <tr>
+          <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
           <td>
-            <%= link_to  admin_order_detail_path(order.id) do %>
-              <%=  l order.created_at %>
+            〒<%= order.delivery_postal_code %><br>
+            <%= order.delivery_address %><br>
+            <%= order.delivery_address_name %>
+          </td>
+          <td>
+            <% order.order_details.each do |order_detail| %>
+              <%= order_detail.item.name %>
             <% end %>
           </td>
-          <td><%= order.customer.first_name%><%= order.customer.last_name %></td>
-          <td><%= order.order_details.sum(:number) %></td>
-          <td><%= order.order_status_i18n %></td>
+          <td><%= order.total_price %></td>
+          <td><%= order.status_i18n %></td>
       </tr>
     <% end %>
 </table>
