--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,24 +1,54 @@
-<h1>商品編集</h1>
-<%= form_with model: @item, url: admin_item_path, method: :patch do |f| %>
+<div class="container">
+  <% if @item.errors.any? %>
+  <%= @item.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @item.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+  <% end %>
+  <h2>商品新規登録</h2>
+   <div class="row">
+     <div class="col-sm-4" ></div>
+     <div class="col-sm-4" >
+     <%= form_with model: @item, url: admin_item_path, method: :patch do |f| %>
+     <table>
+  　    <tbody>
+         <tr>
+    　　     <td>商品画像</td>
+    　　     <td><%= f.file_field :image, accept: "image/*" %></td>
+    　    </tr>
+    　    <tr>
+    　　     <td>商品名</td>
+    　　     <td><%= f.text_field :name %></td>
+    　    </tr>
+    　    <tr>
+    　　     <td>商品説明</td>
+    　　     <td><%= f.text_area :explamatory_text %></td>
+    　    </tr>
+    　    <tr>
+    　    　<td>ジャンル</td>
+    　　     <td><%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい" %></td>
+    　    </tr>
+    　    <tr>
+    　　     <td>税抜価格</td>
+    　　     <td><%= f.text_field :without_tax_price %>円</td>
+    　    </tr>
+    　    <tr>
+    　　     <td>販売ステータス</td>
+    　　     <td>
+    　　       <%= f.radio_button :is_sales_status, true %>
+               <%= f.label :is_sales_status, "販売中", {value: :true, style: "display: inline-block;"} %>
+             <%= f.radio_button :is_sales_status, false %>
+               <%= f.label :is_sales_status, "販売停止中", {value: :false, style: "display: inline-block;"} %>
+    　　     </td>
+    　    </tr>
+           <td><%= f.submit '変更を保存', class:"btn btn-success" %></td>
 
-  <h4>商品画像</h4>
-  <%= f.file_field :image, accept: "image/*" %>
-<h4>商品名</h4>
-  <%= f.text_field :name %>
-<h4>商品説明</h4>
-  <%= f.text_area :explamatory_text %>
-<h4>ジャンル</h4>
-<%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい" %>
-<h4>税抜価格</h4>
-  <%= f.text_area :without_tax_price %>円
-<h4>販売ステータス</h4>
-  <%= f.radio_button :is_sales_status, true %>
-    <%= f.label :is_sales_status, "販売中", {value: :true, style: "display: inline-block;"} %>
-  <%= f.radio_button :is_sales_status, false %>
-    <%= f.label :is_sales_status, "販売停止中", {value: :false, style: "display: inline-block;"} %>
-
-  <%= f.submit '変更を保存', class:"btn btn-success" %>
-
-
-<% end %>
-
+     <% end %>
+     </div>
+     <div class="col-sm-4" ></div>
+    </tbody>
+    </table>
+  </div>
+</div>
