--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,22 +1,43 @@
-<h1>商品詳細</h1>
+<div>
+  <%= flash[:success] %>
+</div>
 
-  <%= image_tag @item.image, size: "300x300" %>
-<h4>商品名</h4>
-  <%= @item.name %>
-<h4>商品説明</h4>
-  <%= @item.explamatory_text %>
-<h4>ジャンル</h4>
-  <%= @item.genre.name %>
-<h4>税込価格（税抜価格）</h4>
-<!--税込価格と一緒に表示されるようにしたい--><!--3桁区切りにしたい-->
- <%= @item.add_tax_without_tax_price.to_s(:dalimited) %>
-  <%= @item.without_tax_price.to_s(:dalimited) %>円
-<h4>販売ステータス</h4>
-  <% if  @item.is_sales_status == true %>
-  　販売中
-  <% else %>
-    販売停止中
-  <% end %>
-  <p><%= link_to "編集する", edit_admin_item_path(@item), class:"btn btn-success" %></p>
-
-
+<div class="container">
+  <h2>商品詳細</h2>
+    <div class="row">
+      <div class="col-sm" >
+    　　<%= image_tag @item.image, size: "300x200" %>
+    　</div>
+    　<div class="col-sm" >
+      　<table class="table">
+      　   <tr>
+      　     <td>商品名</td>
+        　  <td><%= @item.name %></td>
+        　</tr>
+        　<tr>
+        　  <td>商品説明</td>
+        　  <td><%= @item.explamatory_text %></td>
+        　</tr>
+        　<tr>
+        　  <td>ジャンル</td>
+        　  <td><%= @item.genre.name %></td>
+        　</tr>
+        　<tr>
+        　  <td>税込価格（税抜価格）</td>
+        　  <td><%= @item.add_tax_without_tax_price.to_s(:delimited) %>
+                (<%= @item.without_tax_price.to_s(:delimited) %>)円</td>
+          </tr>
+          <tr>
+            <td>販売ステータス</td>
+            <td><% if  @item.is_sales_status == true %>
+                  販売中
+                <% else %>
+                  販売停止中
+                <% end %>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+</div>
+<div class="text-center"><%= link_to "編集する", edit_admin_item_path(@item), class:"btn btn-success" %></div>
