--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,7 +1,8 @@
-<strong>本当に退会しますか？</strong><br>
+<div class="text-center">
+    <strong>本当に退会しますか？</strong><br>
 退会すると、会員登録情報や<br>
 これまでの購入履歴が閲覧できなくなります。<br>
 退会する場合は、「退会する」をクリックしてください。
 
-<!--退会処理を行いたい-->
 <p><%= link_to "退会しない", current_customer_path, class:"btn btn-primary" %><%= link_to "退会する", current_customer_withdraw_path, method: :patch, "data-confirm" => "本当に削除しますか？", class:"btn btn-danger" %></p>
+</div>
