--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,14 +1,32 @@
-<h1>マイページ</h1>
-<h2>登録情報<%= link_to "編集する", current_customer_edit_path, class:"btn btn-success" %></h2>
+<h2>マイページ</h2>
+<h4>登録情報<%= link_to "編集する", current_customer_edit_path, class:"btn btn-success" %></h4>
 
-<div>
-  <h3>氏名<%= @customer.last_name %> <%= @customer.first_name %></h3>
-  <h3>カナ<%= @customer.last_name_kana %> <%= @customer.first_name_kana %></h3>
-  <h3>郵便番号<%= @customer.postal_code %></h3>
-  <h3>住所<%= @customer.address %></h3>
-  <h3>電話番号<%= @customer.telephone_number %></h3>
-  <h3>メールアドレス<%= @customer.email %></h3>
-</div>
+<table border="1" style="border-collapse: collapse">
+  <tr>
+    <td>氏名</td>
+    <td><%= @customer.last_name %> <%= @customer.first_name %></td>
+  </tr>
+  <tr>
+    <td>カナ</td>
+    <td><%= @customer.last_name_kana %> <%= @customer.first_name_kana %></td>
+  </tr>
+  <tr>
+    <td>郵便番号</td>
+    <td><%= @customer.postal_code %></td>
+  </tr>
+  <tr>
+    <td>住所</td>
+    <td><%= @customer.address %></td>
+  </tr>
+  <tr>
+    <td>電話番号</td>
+    <td><%= @customer.telephone_number %></td>
+  </tr>
+  <tr>
+    <td>メールアドレス</td>
+    <td><%= @customer.email %></td>
+  </tr>
+</table>
 
-<h2>配送先<%= link_to "一覧を見る", delivery_addresses_path, class:"btn btn-primary" %></h2>
-<h2>注文履歴<%= link_to "一覧を見る", orders_path, class:"btn btn-primary" %></h2>
+<h4>配送先<%= link_to "一覧を見る", delivery_addresses_path, class:"btn btn-primary" %></h4>
+<h4>注文履歴<%= link_to "一覧を見る", orders_path, class:"btn btn-primary" %></h4>
