--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -21,8 +21,9 @@
               <%= order_detail.item.name %>
             <% end %>
           </td>
-          <td><%= order.total_price %></td>
+          <td><%= order.order_details.sum { |cart_item| (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity } + 800 %></td>
           <td><%= order.status_i18n %></td>
+          <td><%= link_to "表示する", order_path(order), class: 'btn btn-primary' %></td>
       </tr>
     <% end %>
 </table>
