--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,69 +1,61 @@
-注文履歴詳細
-
-<%= form_with model: @order, url: admin_orders_path, method: :patch, local: true do |f| %>
-  <table>
-    <tr>
-      <td>購入者</td>
-      <td><%= @order.customer.first_name %><%= @order.customer.last_name %></td>
-    </tr>
-    <tr>
-      <td>注文日</td>
-      <td><%= l @order.created_at %></td>
-    </tr>
-    <tr>
-      <td>配送先</td>
-      <td><%= @order.postal_code%><%= @order.address %><%= @order.name %></td>
-    </tr>
-    <tr>
-      <td>支払い方法</td>
-      <td><%= @order.payment_method_i18n%></td>
-    </tr>
-    <tr>
-      <td>注文ステータス</td>
-      <td>
-        <%= f.select :order_status, Order.order_statuses_i18n.invert %>
-        <%= f.submit "更新", class: "btn btn-success" %>
-      </td>
-    </tr>
-  </table>
-<% end %>
-
+<h3>注文情報</h3>
 <table>
   <tr>
-    <td>商品名</td>
-    <td>単価(税込)</td>
-    <td>数量</td>
-    <td>小計</td>
-    <td>製作ステータス</td>
+    <tr>注文日</tr>
+    <tr><%= @order.created_at.strftime('%Y/%m/%d') %></tr>
+  </tr>
+  <tr>
+    <td>配送先</td>
+    <td>
+      〒<%= @order.delivery_postal_code %><br>
+      <%= @order.delivery_address %><br>
+      <%= @order.delivery_address_name %>
+    </td>
+  </tr>
+  <tr>
+    <td>支払方法</td>
+    <td><%= @order.payment_method_i18n%></td>
+  </tr>
+  <tr>
+    <td>ステータス</td>
+    <td><%= @order.status_i18n %></td>
   </tr>
 </table>
-<% @order_details.each do |order_detail| %>
 
-<% @sum = 0 %>
-<% @sum += order_detail.item.with_tax_price %>
-
-<%= form_with model: order_detail , url: admin_order_details_path(order_detail.id) , method: :patch , local: true do |f| %>
-    <table>
-        <tr>
-          <td><%= order_detail.item.name %></td>
-          <td><%= order_detail.item.with_tax_price %></td>
-          <td>
-            <%= f.select :manufacture_status, OrderDetail.manufacture_statuses_i18n.invert %>
-            <%= f.submit "更新", class: "btn btn-success" %>
-          </td>
-        </tr>
-      <% end %>
-      <tr>
-        <td>商品合計</td>
-        <td><%= @sum %>円</td>
-      </tr>
-      <tr>
-        <td>送料</td>
-        <td>800円</td>
-      </tr>
-      <tr>
-        <td>請求金額合計</td>
-        <td><%= @sum + 800 %>円</td>
-      </tr>
-    </table>
+<h3>請求情報</h3>
+<table>
+  <tr>
+    <td>商品合計</td>
+    <td><%= @order.order_details.sum { |cart_item| (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity } %></td>
+  </tr>
+  <tr>
+    <td>配送料</td>
+    <td>800</td>
+  </tr>
+  <tr>
+    <td>ご請求額</td>
+    <td><%= @order.order_details.sum { |cart_item| (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity } + 800 %></td>
+  </tr>
+</table>
+<h3>注文内容</h3>
+<% @order.order_details.each do |order_detail| %>
+<table>
+  <tr>
+    <td>商品</td>
+    <td><%= order_detail.item.name %></td>
+  </tr>
+  <tr>
+    <td>単価(税込)</td>
+    <td><%= (order_detail.item.without_tax_price * 1.1).floor %></td>
+  </tr>
+  <tr>
+    <td>個数</td>
+    <td><%= order_detail.quantity %></td>
+  </tr>
+  <tr>
+    <td>小計</td>
+    <td><%= (order_detail.item.without_tax_price * 1.1 *order_detail.quantity).floor %></td>
+  </tr>
+</table>
 <% end %>
+
