[編集中](会員)マイページ(管理者)商品

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -3,6 +3,7 @@
     <h2>商品一覧</h2>
 
       <%= button_to "+", {controller: 'items', action: 'new'}, {method: :get} %>
+      <button type="button" class="btn btn-outline-warning">+</button>
 
         <table class="table">
           <thead>
