--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -9,8 +9,8 @@
   <% end %>
   <h2>商品新規登録</h2>
    <div class="row">
-     <div class="col-sm-4" ></div>
-     <div class="col-sm-4" >
+     <div class="col-sm-2" ></div>
+     <div class="col-sm-8" >
      <%= form_with model: @item, url: admin_items_path , method: :post do |f| %>
      <table>
   　    <tbody>
@@ -20,11 +20,11 @@
     　    </tr>
     　    <tr>
     　　     <td>商品名</td>
-    　　     <td><%= f.text_field :name %></td>
+    　　     <td><%= f.text_field :name, placeholder: "商品名" %></td>
     　    </tr>
     　    <tr>
     　　     <td>商品説明</td>
-    　　     <td><%= f.text_area :explamatory_text %></td>
+    　　     <td><%= f.text_area :explamatory_text, placeholder: "ここに説明文を記述します" %></td>
     　    </tr>
     　    <tr>
     　    　<td>ジャンル</td>
@@ -32,7 +32,7 @@
     　    </tr>
     　    <tr>
     　　     <td>税抜価格</td>
-    　　     <td><%= f.text_field :without_tax_price %>円</td>
+    　　     <td><%= f.text_field :without_tax_price, placeholder: "1000" %>円</td>
     　    </tr>
     　    <tr>
     　　     <td>販売ステータス</td>
@@ -47,7 +47,7 @@
 
      <% end %>
      </div>
-     <div class="col-sm-4" ></div>
+     <div class="col-sm-2" ></div>
     </tbody>
     </table>
   </div>
