--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,5 +1,5 @@
 <h2>マイページ</h2>
-<h4>登録情報<%= link_to "編集する", current_customer_edit_path, class:"btn btn-success" %></h4>
+<h5><strong>登録情報　　</strong><%= link_to "編集する", current_customer_edit_path, class:"btn btn-success" %></h5>
 
 <table border="1" style="border-collapse: collapse">
   <tr>
@@ -28,5 +28,5 @@
   </tr>
 </table>
 
-<h4>配送先<%= link_to "一覧を見る", delivery_addresses_path, class:"btn btn-primary" %></h4>
-<h4>注文履歴<%= link_to "一覧を見る", orders_path, class:"btn btn-primary" %></h4>
+<h5><strong>配送先　　　</strong><%= link_to "一覧を見る", delivery_addresses_path, class:"btn btn-primary" %></h4>
+<h5><strong>注文履歴　　</strong><%= link_to "一覧を見る", orders_path, class:"btn btn-primary" %></h>
