--- a/app/views/public/orders/completion.html.erb
+++ b/app/views/public/orders/completion.html.erb
@@ -1,1 +1,3 @@
-<h3>ご注文ありがとうございました！</h3>
+<div class="d-flex align-items-center justify-content-center" style="height:600px;">
+    <h2 class="text-center">ご注文ありがとうございました！</h2>
+</div>
