--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,61 +1,70 @@
-<h3>注文情報</h3>
-<table>
-  <tr>
-    <tr>注文日</tr>
-    <tr><%= @order.created_at.strftime('%Y/%m/%d') %></tr>
-  </tr>
-  <tr>
-    <td>配送先</td>
-    <td>
-      〒<%= @order.delivery_postal_code %><br>
-      <%= @order.delivery_address %><br>
-      <%= @order.delivery_address_name %>
-    </td>
-  </tr>
-  <tr>
-    <td>支払方法</td>
-    <td><%= @order.payment_method_i18n%></td>
-  </tr>
-  <tr>
-    <td>ステータス</td>
-    <td><%= @order.status_i18n %></td>
-  </tr>
-</table>
+<div class='container pt-5'>
+    <div class='row'>
+        <div class='col-md-6'>
+          <h3>注文情報</h3>
+          <table class='table table-bordered mt-3'>
+            <tr>
+              <td class='table-active'>注文日</td>
+              <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+            </tr>
+            <tr>
+              <td class='table-active'>配送先</td>
+              <td>
+                〒<%= @order.delivery_postal_code %><br>
+                <%= @order.delivery_address %><br>
+                <%= @order.delivery_address_name %>
+              </td>
+            </tr>
+            <tr>
+              <td class='table-active'>支払方法</td>
+              <td><%= @order.payment_method_i18n%></td>
+            </tr>
+            <tr>
+              <td class='table-active'>ステータス</td>
+              <td><%= @order.status_i18n %></td>
+            </tr>
+          </table>
+        </div>
+        <div class='col-sm-5 offset-md-1'>
+          <h3>請求情報</h3>
+          <table class='table table-bordered mt-3'>
+            <tr>
+              <td class='table-active'>商品合計</td>
+              <td><%= @order.order_details.sum { |cart_item| (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity } %></td>
+            </tr>
+            <tr>
+              <td class='table-active'>配送料</td>
+              <td>800</td>
+            </tr>
+            <tr>
+              <td class='table-active'>ご請求額</td>
+              <td><%= @order.order_details.sum { |cart_item| (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity } + 800 %></td>
+            </tr>
+          </table>
+        </div>
+    </div>
+</div>
 
-<h3>請求情報</h3>
-<table>
-  <tr>
-    <td>商品合計</td>
-    <td><%= @order.order_details.sum { |cart_item| (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity } %></td>
-  </tr>
-  <tr>
-    <td>配送料</td>
-    <td>800</td>
-  </tr>
-  <tr>
-    <td>ご請求額</td>
-    <td><%= @order.order_details.sum { |cart_item| (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity } + 800 %></td>
-  </tr>
-</table>
-<h3>注文内容</h3>
-<% @order.order_details.each do |order_detail| %>
-<table>
-  <tr>
-    <td>商品</td>
-    <td><%= order_detail.item.name %></td>
-  </tr>
-  <tr>
-    <td>単価(税込)</td>
-    <td><%= (order_detail.item.without_tax_price * 1.1).floor %></td>
-  </tr>
-  <tr>
-    <td>個数</td>
-    <td><%= order_detail.quantity %></td>
-  </tr>
-  <tr>
-    <td>小計</td>
-    <td><%= (order_detail.item.without_tax_price * 1.1 *order_detail.quantity).floor %></td>
-  </tr>
-</table>
-<% end %>
-
+<div class='container pt-5'>
+    <div class='row'>
+        <div class='col-lg'>
+          <h3>注文内容</h3>
+          <table class='table table-bordered mt-3'>
+            <tr class='table-active'>
+              <td>商品</td>
+              <td>単価(税込)</td>
+              <td>個数</td>
+              <td>小計</td>
+            </tr>
+            <% @order.order_details.each do |order_detail| %>
+            <tr>
+                <td><%= order_detail.item.name %></td>
+                <td><%= (order_detail.item.without_tax_price * 1.1).floor %></td>
+                <td><%= order_detail.quantity %></td>
+                <td><%= (order_detail.item.without_tax_price * 1.1 *order_detail.quantity).floor %></td>
+            </tr>
+            <% end %>
+          </table>
+        </div>
+    </div>
+</div>
