--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -15,7 +15,7 @@
           <% @orders.each do |order| %>
           <tr>
             <td class="align-middle link">
-              <%= link_to admin_order_path(order) do %>
+              <%= link_to admin_order_path(order.id) do %>
                 <%= order.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
               <% end %>
             </td>
