--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,6 +1,7 @@
 <div class='container pt-5'>
     <div class='row'>
         <div class='col-md-6'>
+            <h3>注文情報確認</h3>
             <table class='table table-bordered mt-3'>
                 <tr>
                     <td class='table-active'>商品名</td>
