--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,6 +1,6 @@
 <div class='container pt-5'>
     <div class='row'>
-        <div class='col-lg'>
+        <div class='col-md-6'>
           <table class='table table-bordered mt-3'>
             <tr class='table-active'>
               <td>注文日</td>
