--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,15 +2,15 @@
     <div class='row'>
         <div class='col-md-6'>
             <%= form_with model: @order, url: '/orders/confirm' , local: true do |f| %>
-            
-              <h3>支払い方法</h3>
+                <h3>注文情報入力</h3>
+                <h4>支払い方法</h4>
                 <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
                 <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
                 <br>
                 <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
                 <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
             
-              <h3>お届け先</h3>
+                <h4>お届け先</h4>
               
                 <p><%= f.radio_button :select_address, 0 %>ご自身の住所</p>
                 <p><%= current_customer.address_display%></p>
