--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,13 +1,15 @@
-<div class="container">
-
-    <div class="plate mx-auto mb-5" id="cork">
-      <h1>About</h1>
-      <p class=""text-center"">
-        ながのCAKEは全国発送可能なケーキ屋さんです。</br>
-        お子様からお年寄りの方までお召し上がりいただけるよう、</br>
-        様々なバリエーションをご用意しております。</br>
-        また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。ぜひご注文ください。
+<div class="d-flex align-items-center justify-content-center" style="height:600px;">
+  <div class="text-center">
+    <h1>About</h1>
+      <p>ながのCAKEは全国発送可能なケーキ屋さんです。</br>
+         お子様からお年寄りの方までお召し上がりいただけるよう、</br>
+         様々なバリエーションをご用意しております。</br>
+         また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+         ぜひご注文ください。
       </p>
-    </div>
-
+      <%= image_tag('ichigotaruto.jpeg', size: '300x300') %>
+      <%= image_tag('purin.jpeg', size: '300x300') %>
+      <%= image_tag('chokocake.jpeg', size: '300x300') %>
+  </div>
 </div>
+
