--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,16 +1,12 @@
-<div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-3'>
-      <p>ジャンル検索</p>
-    </div>
-    <div class='col-md-8 offset-md-1'>
-      <p class="home-text">ようこそ、ながのCAKEへ！<br>
-        このサイトは、ケーキ販売のECサイトになります。
+<div class="d-flex align-items-center justify-content-center" style="height:600px;">
+  <div class="text-center">
+      <h2 class="home-text">ようこそ、ながのCAKEへ！<br></h2>
+        <p>このサイトは、ケーキ販売のECサイトになります。<br>
         会員でない方も商品の閲覧はできますが、<br>
         購入には会員登録が必要になります。
       </p>
+      <%= image_tag('toppage.jpeg', size: '600x400') %>
     </div>
-  </div>
 </div>
 <div class="container new-item">
   <h2>新着商品</h2>
