--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,12 +1,23 @@
 <%= form_with model: @cart_item, url: cart_items_path do |f| %>
+  <body>
+  <main>
+   <div class="container px-5 px-sm-3">
+   <div class="row">
+   <div class="col-md-3"> </br>
   <%= f.hidden_field :item_id, value: @item.id %>
-  <%= image_tag @item.image, size: "300x300" %>
-  <h2>商品名</h2>
-  <p><%= @item.name %></p>
-  <h2>商品説明</h2>
-  <p><%= @item.explamatory_text %></p>
-  <h2>税込価格</h2>
-  <p><%= @item.add_tax_without_tax_price.to_s(:delimited) %>円</p>
-  <%= f.select :quantity, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], { include_blank: '個数選択' }, required: true %>&emsp;
-  <%= f.submit "カートに入れる", class: 'btn btn-primary' %>
-<% end %>
+  <%= image_tag @item.image, size: "300x300" %></div>
+
+  <div class="col-md-8 offset-md-1">
+   </br>
+    </br>
+     <h1><%= @item.name %> </h1>
+      <h5> <%= @item.explamatory_text %></h5>
+       <h3>￥<%= @item.add_tax_without_tax_price.to_s(:delimited) %><span style="font-size:15px; "> 税込 </span></h3>
+       <%= f.select :quantity, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], { include_blank: '個数選択' }, required: true %>&emsp;
+      <%= f.submit "カートに入れる", class: 'btn btn-primary' %>
+      <% end %>
+     </div>
+   </div>
+   </div>
+  </main>
+</body>
